--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix = "0.10.0"
-actix-rt = "1.1.1"
+tokio = { version = "0.2.22", features = ["rt-core"] }
 rlua = "0.17.0"
 rlua-async = "0.4.0"
